--- a/Lab10_Porto/.classpath
+++ b/Lab10_Porto/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="lib" path="lib/jgrapht-core-0.9.2-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/mchange-commons-java-0.2.11.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.29-bin.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
